--- a/tic-tac-toe/src/styles/global.scss
+++ b/tic-tac-toe/src/styles/global.scss
@@ -1,33 +1,52 @@
 :root {
-  --white-500: #ffffff;
-
-  --gray-50: #f9fafc;
-  --gray-100: #eff2f7;
-  --gray-200: #e5e9f2;
-  --gray-300: #e0e6ed;
-  --gray-600: #8492a6;
-
   --black-300: #3c4858;
   --black-400: #273444;
   --black-500: #1f2d3d;
+
+  --gray-100: #f9fafc;
+  --gray-200: #eff2f7;
+  --gray-300: #e5e9f2;
+  --gray-400: #e0e6ed;
+  --gray-500: #8492a6;
+
+  --white-500: #ffffff;
+
+  --blue-500: #1fb6ff;
+
+  --green-500: #13ce66;
+
+  --orange-500: #ff7849;
+
+  --pink-500: #ff49db;
+
+  --purple-500: #7e5bef;
+
+  --yellow-500: #ffc82c;
+
+  --shadow: 0 1px 2px 0 rgba(31, 45, 61, 0.15);
+
+  --sm: 576px;
+  --md: 768px;
+  --lg: 992px;
+  --xl: 1200px;
 }
 
 html {
-  font: 400 16px "Open Sans", sans-serif;
+  font: 400 16px 'Open Sans', sans-serif;
   color: var(--black-400);
 
-  background-color: var(--gray-50);
-  scroll-behavior: smooth;
-}
+  background-color: var(--gray-100);
 
-@media (max-width: 992px) {
-  html {
+  height: 100%;
+  width: 100%;
+
+  scroll-behavior: smooth;
+
+  @media (max-width: var(--lg)) {
     font-size: 87.5%;
   }
-}
 
-@media (max-width: 768px) {
-  html {
+  @media (max-width: var(--md)) {
     font-size: 75%;
   }
 }
@@ -37,6 +56,9 @@ html {
 *::after {
   margin: 0;
   padding: 0;
+
+  outline: 0;
+
   box-sizing: border-box;
 }
 
@@ -55,8 +77,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 500;
+
   margin: 0;
 }
 
@@ -64,7 +87,7 @@ body,
 input,
 button,
 textarea {
-  font: 400 1rem "Open Sans", sans-serif;
+  font: 400 1rem 'Open Sans', sans-serif;
 }
 
 button {
@@ -85,7 +108,7 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #fff;
+  background: var(--white-500);
 }
 
 main {
@@ -118,7 +141,7 @@ main {
 
 .card {
   background-color: var(--white-500);
-  box-shadow: 0 1px 2px 0 rgb(31 45 61 / 15%);
+  box-shadow: var(--shadow);
 
   border-radius: 8px;
 
@@ -142,7 +165,7 @@ main {
 .card-image {
   border-radius: 100%;
   border: 3px solid var(--white-500);
-  box-shadow: 0 1px 2px 0 rgb(31 45 61 / 15%);
+  box-shadow: var(--shadow);
 
   background-color: var(--white-500);
 
@@ -158,27 +181,27 @@ main {
 }
 
 .blue {
-  background-color: #1fb6ff;
+  background-color: var(--blue-500);
 }
 
 .purple {
-  background-color: #7e5bef;
+  background-color: var(--purple-500);
 }
 
 .pink {
-  background-color: #ff49db;
+  background-color: var(--pink-500);
 }
 
 .orange {
-  background-color: #ff7849;
+  background-color: var(--orange-500);
 }
 
 .green {
-  background-color: #13ce66;
+  background-color: var(--green-500);
 }
 
 .yellow {
-  background-color: #ffc82c;
+  background-color: var(--yellow-500);
 }
 
 .card-image img {
@@ -198,7 +221,7 @@ main {
   text-transform: uppercase;
   font-weight: 700;
   text-align: center;
-  color: var(--gray-600);
+  color: var(--gray-500);
 
   display: flex;
   align-items: center;
@@ -214,7 +237,7 @@ main {
   height: 100%;
 
   background-color: var(--white-500);
-  box-shadow: 0 1px 2px 0 rgb(31 45 61 / 15%);
+  box-shadow: var(--shadow);
 
   border-radius: 8px;
 
@@ -235,7 +258,7 @@ main {
 .buttons button {
   width: 100%;
 
-  font: 600 1rem "Poppins";
+  font: 600 1rem 'Poppins';
   color: var(--white-500);
 
   padding: 0.5rem 0;
@@ -271,7 +294,7 @@ button:disabled {
 
   cursor: pointer;
 
-  background-color: var(--gray-100);
+  background-color: var(--gray-200);
 }
 
 .cell:nth-child(1) {
